Bug 1636004 - Flush frames in nsFrameLoader::TryRemoteBrowser. r=mattwoodrow

With LazyFC in the parent process enabled, we can get here more easily
without frames for the <browser> element.

This causes some assertion failures because we start parenting the
remote browsers to the wrong layer manager when inside a popup.

If we get to nsFrameLoader::TryRemoteBrowser without a frame,
GetLayerManager (which uses GetWidgetForContent) will just fall back to
GetWidgetForDocument. Badness ensues if the widget should actually not
be that one.

Make sure to flush frames when we load an event, so that we can
initialize stuff properly.

We could try to only flush if inside a popup or something, but this code
is a bit tricky so if possible I'd prefer not to diverge.

Differential Revision: https://phabricator.services.mozilla.com/D74177